Add pipeline for hip hdf5 and socket data

--- a/experiments/cfgs/hiph5_scratch_n_end2end.yml
+++ b/experiments/cfgs/hiph5_scratch_n_end2end.yml
@@ -1,16 +1,16 @@
-EXP_DIR: socket_end2end 
+EXP_DIR: hiph5_scratch_end2end 
 TRAIN:
   HAS_RPN: True
-  SCALES: [600,]
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
   RPN_POSITIVE_OVERLAP: 0.7
   RPN_BATCHSIZE: 256
   PROPOSAL_METHOD: gt
   BG_THRESH_LO: 0.0
-  FG_FRACTION: 1.0
-  SNAPSHOT_ITERS: 4586
+  BATCH_SIZE: 50
+  FG_FRACTION: 0.5
+  SNAPSHOT_ITERS: 2944
+  RPN_POST_NMS_TOP_N: 2000
 TEST:
   HAS_RPN: True
-  SCALES: [600,]
-PIXEL_MEANS: [[[34.1331, 34.1331, 34.1331]]] 
+PIXEL_MEANS: [[[35.6319, 35.6319, 35.6319]]] 
