--- a/experiments/cfgs/socket_imgnet_mean_end2end.yml
+++ b/experiments/cfgs/socket_imgnet_mean_end2end.yml
@@ -7,10 +7,10 @@ TRAIN:
   RPN_POSITIVE_OVERLAP: 0.7
   RPN_BATCHSIZE: 256
   PROPOSAL_METHOD: gt
+  BATCH_SIZE: 50
   BG_THRESH_LO: 0.0
   FG_FRACTION: 1.0
   SNAPSHOT_ITERS: 4586
 TEST:
   HAS_RPN: True
   SCALES: [600,]
-PIXEL_MEANS: [[[34.1331, 34.1331, 34.1331]]] 
