--- a/experiments/cfgs/socket_scratch_end2end.yml
+++ b/experiments/cfgs/socket_scratch_end2end.yml
@@ -1,7 +1,7 @@
-EXP_DIR: socket_end2end 
+EXP_DIR: socket_scratch_end2end
 TRAIN:
   HAS_RPN: True
-  SCALES: [600,]
+  SCALES: [300,]
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
   RPN_POSITIVE_OVERLAP: 0.7
@@ -12,5 +12,5 @@ TRAIN:
   SNAPSHOT_ITERS: 4586
 TEST:
   HAS_RPN: True
-  SCALES: [600,]
+  SCALES: [300,]
 PIXEL_MEANS: [[[34.1331, 34.1331, 34.1331]]] 
