--- a/experiments/cfgs/hiph5_scratch_end2end.yml
+++ b/experiments/cfgs/hiph5_scratch_end2end.yml
@@ -1,7 +1,6 @@
-EXP_DIR: socket_end2end 
+EXP_DIR: hiph5_scratch_end2end 
 TRAIN:
   HAS_RPN: True
-  SCALES: [600,]
   IMS_PER_BATCH: 1
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
   RPN_POSITIVE_OVERLAP: 0.7
@@ -9,8 +8,7 @@ TRAIN:
   PROPOSAL_METHOD: gt
   BG_THRESH_LO: 0.0
   FG_FRACTION: 1.0
-  SNAPSHOT_ITERS: 4586
+  SNAPSHOT_ITERS: 2944
 TEST:
   HAS_RPN: True
-  SCALES: [600,]
-PIXEL_MEANS: [[[34.1331, 34.1331, 34.1331]]] 
+PIXEL_MEANS: [[[35.6319, 35.6319, 35.6319]]] 
