--- a/experiments/cfgs/socket_scratch_n_fg50_end2end.yml
+++ b/experiments/cfgs/socket_scratch_n_fg50_end2end.yml
@@ -1,4 +1,4 @@
-EXP_DIR: socket_end2end 
+EXP_DIR: socket_scratch_end2end
 TRAIN:
   HAS_RPN: True
   SCALES: [600,]
@@ -14,5 +14,6 @@ TRAIN:
 TEST:
   HAS_RPN: True
   SCALES: [600,]
-  #RPN_POST_NMS_TOP_N: 300
-  RPN_POST_NMS_TOP_N: 50
+  RPN_POST_NMS_TOP_N: 300
+PIXEL_MEANS: [[[34.1331, 34.1331, 34.1331]]] 
+#RPN_POST_NMS_TOP_N: 50
