--- a/experiments/cfgs/socket_scratch_n_fg50_roils_end2end.yml
+++ b/experiments/cfgs/socket_scratch_n_fg50_roils_end2end.yml
@@ -1,4 +1,4 @@
-EXP_DIR: socket_end2end 
+EXP_DIR: socket_scratch_end2end
 TRAIN:
   HAS_RPN: True
   SCALES: [600,]
@@ -15,4 +15,4 @@ TEST:
   HAS_RPN: True
   SCALES: [600,]
   RPN_POST_NMS_TOP_N: 300
-  #RPN_POST_NMS_TOP_N: 50
+PIXEL_MEANS: [[[34.1331, 34.1331, 34.1331]]] 
